--- a/popup.html
+++ b/popup.html
@@ -2,8 +2,25 @@
 <html>
   <head>
     <link rel="stylesheet" href="popup.css">
+	<script src= "updateSelected.js"></script>
   </head>
   <body>
-    Hello World
+    <div>
+        <h1>Choose dictionary or thesaurus:</h1>
+		<hr class= "solid">
+        <div>
+            <button id="dictionary_com">
+                 https://www.dictionary.com/ 
+            </button>
+            <button id="thesaurus_com">
+                 https://www.thesaurus.com/ 
+            </button>
+        </div>
+    </div>
+	<hr class= "solid">
+	<div id= "selectedButton">
+		Selected: 
+	</div>
   </body>
+  
 </html>
