--- a/popup.html
+++ b/popup.html
@@ -8,20 +8,23 @@
     <div>
         <h1>Choose dictionary or thesaurus:</h1>
 		<hr class= "solid">
+		<div id= "highlightedWord">
+			Current Word: 
+		</div>
+		<hr class= "solid">
         <div>
             <button id="dictionary_com">
-                 https://www.dictionary.com/ 
+                 Dictionary
             </button>
             <button id="thesaurus_com">
-                 https://www.thesaurus.com/ 
+                 Thesaurus 
             </button>
         </div>
     </div>
 	<hr class= "solid">
 	<div id= "selectedButton">
 		Selected: 
-  </div>
-    <script src="popup.js"></script>
+	</div>
   </body>
   
 </html>
