Added selected word and define/thesaurus option with buttons in updateSelected.js

--- a/popup.html
+++ b/popup.html
@@ -2,11 +2,10 @@
 <html>
   <head>
     <link rel="stylesheet" href="popup.css">
-	<script src= "updateSelected.js"></script>
   </head>
   <body>
     <div>
-        <h1>Choose dictionary or thesaurus:</h1>
+        <h1>Hello. Choose dictionary or thesaurus: </h1>
 		<hr class= "solid">
         <div>
             <button id="dictionary_com">
@@ -19,9 +18,8 @@
     </div>
 	<hr class= "solid">
 	<div id= "selectedButton">
-		Selected: 
+
   </div>
-    <script src="popup.js"></script>
+  <script src="popup.js"></script>
   </body>
-  
 </html>
